--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ Pagination
 .underline {
   width: 8rem;
   height: 0.25rem;
-  background: var(--clr-primary-5);
+  background-color: #afc5ff;
   margin: 0 auto;
 }
 .followers {
@@ -169,15 +169,16 @@ Pagination
 .card h4 {
   margin-bottom: 1.5rem;
   font-size: 0.85rem;
-  color: var(--clr-grey-5);
+  color: #263849;
 }
 
 .btn {
   padding: 0.35rem 0.75rem;
   letter-spacing: 1.6px;
   font-size: 0.75rem;
-  color: var(--clr-white);
-  background: var(--clr-primary-5);
+  color: #fff;
+
+  background-color: #53a8b6;
   border-radius: var(--radius);
   border-color: transparent;
   text-transform: uppercase;
@@ -193,7 +194,7 @@ Pagination
 .page-btn {
   width: 2rem;
   height: 2rem;
-  background: var(--clr-primary-7);
+  background-color: #afc5ff;
   border-color: transparent;
   border-radius: 5px;
   cursor: pointer;
@@ -201,7 +202,7 @@ Pagination
   transition: var(--transition);
 }
 .active-btn {
-  background: var(--clr-primary-1);
+  background-color: #ff6f3c;
   color: var(--clr-white);
 }
 .prev-btn,
@@ -214,6 +215,7 @@ Pagination
   margin: 0.5rem;
   font-size: 1rem;
   cursor: pointer;
+  color: #394a51;
 }
 
 @media screen and (min-width: 775px) {
